# playnext

./: .gitignore  README.md  install.reg  pyproject.toml
src/playnext/: playnext.py
